syntax = "proto3";
import "Protos/google/api/annotations.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AdminMicroservice.Protos";

service AdminUserServiceProto {
	rpc ListUsers (ListUsersRequest) returns (AdminUsersReply);
    rpc GetUser (GetUserRequest) returns (GetUserReply) {
        option (google.api.http) = {
            get: "/admin/get-user"
        };
    };
}

message ListUsersRequest {
	bool isCustomer = 1;
}

message AdminUsersReply {
    repeated AdminUser list = 1;
}

message GetUserRequest {
    string username = 1;
}

message GetUserReply {
    optional AdminUser data = 1;
}

message AdminUser {
    string id = 1;
    string username = 2;
    string password = 3;
    string fullName = 4;
    string email = 5;
    bool isSystem = 6;
    bool isCustomer = 7;
    bool disabled = 8;
    google.protobuf.Timestamp createdDate = 9;
    google.protobuf.Timestamp modifiedDate = 10;
    google.protobuf.StringValue refreshToken = 11;
    google.protobuf.StringValue refreshTokenExpiryDate = 12;
}