syntax = "proto3";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "google/protobuf/timestamp.proto";

option csharp_namespace = "AdminMicroservice.Protos";

service AdminAuthServiceProto {
	rpc Login (AdminLoginRequest) returns (AdminLoginReply);
}

message AdminLoginRequest {
    string username = 1;
    string password = 2;
}

message AdminLoginReply {
    string Token = 1;
    google.protobuf.Timestamp Expiration = 2;
    string Username = 3;
    google.protobuf.StringValue RefreshToken = 4;
    string ErrorCode = 5;
}